# OMRecViewer_KvnchRebuild

./: .gitignore  README.md  index.html  package-lock.json  package.json  pom.xml
cache/: cache_meta.json  om_P007.cache.json  om_P015.cache.json  om_P018.cache.json  om_P019.cache.json  om_P025.cache.json  om_P033.cache.json  om_P038.cache.json  om_P040.cache.json  om_P088.cache.json  om_P104.cache.json  om_P215.cache.json  om_P221.cache.json  om_P283.cache.json  om_P285.cache.json  om_P300.cache.json  om_P306.cache.json  om_P308.cache.json  om_P309.cache.json  om_w3728200093.cache.json  puzzles.cache.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: replay.html
frontend/src/: App.vue
frontend/src/api/: omApi.ts
frontend/src/components/: AnalysisPanel.vue  HomeDashboard.vue  HullPanel.vue  ImprovePanel.vue  OmList.vue  ParetoPanel.vue  PuzzleBrowser.vue  RecordPreview.vue  ReplayModal.vue
frontend/src/types/: om.ts
frontend/src/utils/: convexHull.ts  dbscan.ts  ellipse2d.ts  i18n.ts  kde.ts  knn.ts  lof.ts  logBus.ts  mahalanobis.ts  metrics.ts  paretoDepth.ts  pca.ts  quickhull3d.ts  spline.ts
jre-minimal/: release
src/: App.vue  App.vue.bak
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: DraftJudgePanel.vue  DraftJudgePanel.vue.bak  NavigatorPanel.vue  NavigatorPanel.vue.bak  OmList.vue  OmList.vue.bak  OmRadar.vue  RecordDetail.vue
src/main/resources/: application.yml
src/types/: om.ts
(+19 files in other folders)
