[package]
name = "opus_magnum_record_viewer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "opus_magnum_record_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 加上下面这一行，让 Rust 获得发送网络请求并处理 JSON 的能力
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
chrono = "0.4"
base64 = "0.22"
png = "0.17"



# 引入 rusqlite，并开启 bundled 特性（这样它会在编译时自动锁死嵌入 sqlite 源码，无需用户在 Windows 操作系统上配置复杂的 sqlite3.dll 环境，真正做到解压即用、可自由分享）
rusqlite = { version = "0.32", features = ["bundled"] }
good_lp = { version = "1", default-features = false, features = ["minilp"] }
